--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,16 @@ a:hover {
   color: #212529;
 }
 
+.serif-link-title {
+  font-family: "Playfair Display", serif;
+  font-size: 24px;
+  text-decoration: underline;
+  color: #212529;
+}
+.serif-link-title:hover {
+  text-decoration: none;
+}
+
 button {
   border-radius: 5px;
   padding: 15px;
